Disable 2D canvas switch to CPU rendering while backgrounded

The switch to software rendering that happens when actively drawing to
a canvas while the containing page is in the background was cause the
compositing layer to get into a corrupted state.  This fix disables
the feature until a permanent solution can be found

BUG=591029

Review URL: https://codereview.chromium.org/1857763002

Cr-Commit-Position: refs/heads/master@{#384990}

Former-commit-id: 30569cfdd5902ae953a0a9e07d19d828c57f5f6f